# ComfyUI-TrainingDataEditor

./: .gitignore  LICENSE  README.md  __init__.py  config_manager.py  pyproject.toml  requirements.txt  server.py
js/: index.js
js/modules/: ImageGrid.js  Settings.js  TextEditor.js  TrainingDataManager.js  TranslationService.js  api.js  languages.js
js/styles/: training-data.css
